--- a/React/src/SidebarChat.css
+++ b/React/src/SidebarChat.css
@@ -20,13 +20,24 @@ a {
     justify-content: space-between;
     width: 100%;
 }
-.sidebarChat__info .chat__messageInfo {
-    align-self: center;
-}
-.sidebarChat__info .chat__readInfo {
-    align-self: center;
-}
-.sidebarChat__info > h2 {
-    font-size: 16px;
-    margin-bottom: 8px;
-}
+
+    .sidebarChat__info .chat__messageInfo {
+        align-self: center;
+    }
+
+    .sidebarChat__info .chat__readInfo {
+        align-self: center;
+    }
+
+    .sidebarChat__info > h2 {
+        font-size: 16px;
+        margin-bottom: 8px;
+    }
+
+    .sidebarChat__info p {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 25vw;
+        min-width: 10rem;
+    }
